# aaaa

./: .replit  README.md  SUMMARY.md  app.py  audio_processor.py  backend.py  config.py  fast_app.py  groq_client.py  main.py  ml_denoiser.py  pyproject.toml  replit.md  requirements.txt  simple_backend.py  start_app.py  test_frontend.html  test_system.py
attached_assets/: Pasted-Task-Build-a-professional-grade-audio-denoising-system-with-the-following-requirements-Step-1-R-1755149878894_1755149878896.txt
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  index.js
frontend/src/components/: ApiKeyModal.js  AudioUploader.js  ProcessingStatus.js  ReportViewer.js
frontend/src/styles/: App.css
frontend/src/utils/: api.js
static/css/: style.css
static/js/: main.js
templates/: index.html
