[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-cors>=6.0.1",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "numpy>=2.2.6",
    "psycopg2-binary>=2.9.10",
    "werkzeug>=3.1.3",
    "librosa>=0.11.0",
    "soundfile>=0.13.1",
    "pydub>=0.25.1",
    "requests>=2.32.4",
    "scipy>=1.16.1",
]
